test-expected/large/projects/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    foo.com/duname: projects
    foo.com/duversion: 1.5.19-20190924.1569335924657
    foo.com/version: 1.5.19
  labels:
    app.kubernetes.io/name: projects
    helm.sh/chart: projects-1.5.19
  name: projects
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: projects
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: projects
        app.kubernetes.io/name: projects
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: foo-shared-config
        - configMapRef:
            name: foo-java-config
        image: repo.foo.com/dmdatap-125.0.0-x64_redhat_linux_7-docker-prod/foo-projects:1.5.19-20190924.1569335924657
        imagePullPolicy: IfNotPresent
        name: projects
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources: {}
