test-expected/large/projects/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    foo.com/duname: projects
    foo.com/duversion: 1.5.19-20190924.1569335924657
    foo.com/version: 1.5.19
  labels:
    app.kubernetes.io/name: projects
    helm.sh/chart: projects-1.5.19
  name: projects
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: projects
  type: ClusterIP
